--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Git Workflow, Centralized</title>
 </head>
-
+<img src=”https://gph.is/1nQGqSa” alt="abhi" >
 <body>
     <h1>Git Workflow, Centralized</h1>
 </body>
