--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <title>Git Workflow, Centralized</title>
 </head>
-<img src=”https://gph.is/1nQGqSa” alt="abhi" >
+<img src=”https://gph.is/1nQGqSa” alt="Paulo">
+
 <body>
-    <h1>Git Workflow, Centralized</h1>"Paulo" >
+    <h1>Git Workflow, Centralized</h1>
 </body>
 
 </html>
