now let's break this

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <title>Git Workflow, Centralized</title>
 </head>
-<img src=”https://gph.is/1nQGqSa” alt="Paulo">
+<img src="https://gph.is/191zeP3" alt="Paulo">
+
+<h3>I'm crazy!!!</h3>
 
 <body>
     <h1>Git Workflow, Centralized</h1>
