--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 </head>
 <img src="https://gph.is/191zeP3" alt="Paulo">
 
-<h3>I'm crazy!!!</h3>
+<img src=”https://gph.is/1nQGqSa” alt=”Jack” ><img src=”https://gph.is/1nQGqSa” alt=”Jack” ><img src=”https://gph.is/1nQGqSa” alt=”Jack” >
+<img src=”https://gph.is/1nQGqSa” alt=”Jack” >
+<img src=”https://gph.is/1nQGqSa” alt=”Jack” >
+<img src=”https://gph.is/1nQGqSa” alt=”Jack” >
 
 <body>
     <h1>Git Workflow, Centralized</h1>
