I'll get this to work if it's the last thing I do

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
 <h3>I'm crazy!!!</h3>
 
+<h2>All work and no play make Homer go something something.</h2>
+
+<h1>Go crazy?</h1>
+
+<h2>DON'T MIND IF I DO!!!</h2>
+
 <body>
     <h1>Git Workflow, Centralized</h1>
 </body>
